[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "unifi-cam-proxy"
description = "Enable non-Ubiquiti cameras to work with Unifi NVR"
requires-python = ">=3.12"
authors = [
    { name = "Pan0ram1x", email = "pan0ram1x@hotmail.com" },
]
license = { text = "MIT" }
dynamic = ["dependencies", "readme", "version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "unifi",
    "unifi-protect",
    "nvr"
]


[project.urls]
"Homepage" = "https://github.com/pan0ram1x/unifi-cam-proxy"
"Bug Tracker" = "https://github.com/pan0ram1x/unifi-cam-proxy/issues"
"Source Code" = "https://github.com/pan0ram1x/unifi-cam-proxy"
"Documentation" = "https://github.com/pan0ram1x/unifi-cam-proxy"


[project.optional-dependencies]
test = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "pre-commit",
    "pyre-check",
    "pytest",
    "wheel"
]
all = ["unifi-cam-proxy[test]"]


[project.scripts]
unifi-cam-proxy = "unifi.main:main"


[tool.setuptools]
package-dir = { "unifi" = "unifi" }


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = { file = ["README.md"] }
version = { attr = "unifi.version.__version__" }


[tool.distutils.bdist_wheel]
universal = true


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
